examples/test/testpolicy15642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15642
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key23: value8
      key28: value39
      key47: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value7
          key43: value18
          key2: value0
      podSelector:
        matchLabels:
          key38: value34
